--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -75,26 +75,19 @@
       <% unless project.teams.empty? %>
         <div class="card-footer text-center">
           <% project.teams.each do |team| %>
-              <%= link_to "View " + team.name, team_path(team) , class: "btn btn-primary mb-4"%>
+              <%= link_to "View " + team.name, team_path(team) , class: "btn btn-primary mt-2 mb-4"%>
               <br>
               <% if team.version_control_link.present? %>
-                <a class="btn btn-info" href=<%= team.version_control_link %> target='_blank'>Version Control</a>
-              <% else %>
-                <!--<a class="btn btn-info" >Version Control</a>!-->
+                <a class="btn btn-info mb-4" href=<%= team.version_control_link %> target='_blank'>Version Control</a>
               <% end %>
               <% if team.production_link.present? %>
-                <a class="btn btn-info" href=<%= team.production_link %> target='_blank'>Production URL</a>
-              <% else %>
-                <!--<a class="btn btn-info">Production URL</a>!-->
+                <a class="btn btn-info mb-4" href=<%= team.production_link %> target='_blank'>Production URL</a>
               <% end %>
               <% if team.management_link.present? %>
-                <a class="btn btn-info" href=<%= team.management_link %> target='_blank'>Team Management</a>
-              <% else %>
-                <!--<a class="btn btn-info">Team Management</a>!-->
+                <a class="btn btn-info mb-4" href=<%= team.management_link %> target='_blank'>Team Management</a>
               <% end %>
-              <br>
               
-              <p class="text-muted mt-4"><%="Last updated at: "%><%= team.updated_at.strftime('%a, %b %d, %Y %I:%M %p')%></p>
+              <p class="text-muted"><%="Last updated at: "%><%= team.updated_at.strftime('%a, %b %d, %Y %I:%M %p')%></p>
 
               <!--
               .strftime('%m/%d/%Y %I:%M %p')%></p>
