--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -87,17 +87,7 @@
                 <a class="btn btn-info mb-4" href=<%= team.management_link %> target='_blank'>Team Management</a>
               <% end %>
               
-              <p class="text-muted"><%="Last updated at: "%><%= team.updated_at.strftime('%a, %b %d, %Y %I:%M %p')%></p>
-
-              <!--
-              .strftime('%m/%d/%Y %I:%M %p')%></p>
-              <p class="text-muted"><%="Last updated at: "%><%= team.iteration_update%></p> 
-              <div class="progress">
-                <div class="progress-bar bg-success" role="progressbar" style="width: 15%" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
-                <div class="progress-bar bg-warning" role="progressbar" style="width: 0%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
-                <div class="progress-bar bg-danger" role="progressbar" style="width: 43%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-              !-->
+              <p class="text-muted"><%="Last Updated: "%><%= team.updated_at.strftime('%a, %b %d, %Y %I:%M %p')%></p>
               <hr>
           <% end %>
         </div>
