--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -1,150 +1,130 @@
 <br>
 <h1 class="display-4 mt-5 ml-5 d-inline">Team: <%=@team.name%></h1>
 <% if has_section_html(@team.project.section.id) || is_student_in_section(current_user, @team.project.section) #is_student_on_team(current_user, @team) %>
-  <%= link_to 'Edit Team' , edit_team_path(@team), class: "btn btn-danger float-right mt-5 mr-5"%>
+<%= link_to 'Edit Team' , edit_team_path(@team), class: "btn btn-danger float-right mt-5 mr-5"%>
 <% end %>
 <% if is_instructor_html || has_section_html(@team.project.section.id) %>
-    <%= link_to "Delete Team", remove_team_path(@team), class: "btn btn-danger float-right mt-5 mr-5" %>
+<%= link_to "Delete Team", remove_team_path(@team), class: "btn btn-danger float-right mt-5 mr-5" %>
 <% end %>
-
 <br>
 <%= link_to 'Back', section_projects_path(@team.project.section), id: 'back', :class => "btn btn-warning mt-3 ml-5"%>
 <br>
-
 <div class="container text-center">
-  <div class="card d-inline-block ml-4 mt-4 text-center w-75">
-    <div class="card-header">
-      <h5 class="card-title">Team Members</h5>
-    </div>
-    <div class="card-body">
-      <% if @team.students.empty? %>
-        <p>No team members</p>
-      <% else %>
-        <% @team.students.each do |student| %>
-          <p class="mt-2"><%= student.name %> : (<%= student.email %>)</p><br>
-        <% end %>
-      <% end %>
-    </div>
-  </div>
-</div>
-
-<div class="container text-center">
-  <div class="card d-inline-block ml-2 mt-4 text-center" style="width:23%">
-    <div class="card-header">
-      <h5 class="card-title">Version Control</h5>
-    </div>
-    <div class="card-body">
-        <% if @team.version_control_link.present? %>
-           <a href=<%= @team.version_control_link %> target="_blank"><%= @team.version_control_link %></a>
-       <% else %>
-            <a class="disabled">N/A</a>
-            <br><br>
-        <% end %>
-    </div>
-  </div>
-  
-  <div class="card d-inline-block ml-2 mt-4 text-center" style="width:23%">
-    <div class="card-header">
-      <h5 class="card-title">Production Site</h5>
-    </div>
-    <div class="card-body">
-        <% if @team.production_link.present? %>
-           <a href=<%= @team.production_link %> target="_blank"><%= @team.production_link %></a>
-        <% else %>
-            <a class="disabled">N/A</a>
-            <br><br>
-        <% end %>
-    </div>
-  </div>
-  
-  <div class="card d-inline-block ml-2 mt-4 text-center" style="width:23%">
-    <div class="card-header">
-      <h5 class="card-title">Management Tracker</h5>
-    </div>
-    <div class="card-body">
-        <% if @team.management_link.present? %>
-           <a href=<%= @team.management_link %> target="_blank"><%= @team.management_link %></a>
-        <% else %>
-            <a class="disabled">N/A</a>
-            <br><br>
-        <% end %>
-    </div>
-  </div>
-  
-  <div class="card d-inline-block ml-2 mt-4 text-center" style="width:23%">
-    <div class="card-header">
-      <h5 class="card-title">Scrum Details</h5>
-    </div>
-    <div class="card-body">
-        <% if @team.scrum_location.present? %>
-           <a class="disabled"><strong>Location:</strong> <%= @team.scrum_location %></a>
-        <% else %>
-            <a class="disabled"><strong>Location:</strong> N/A</a>
-        <% end %>
-       <br>
-       <a class="disabled"><strong>Time:</strong> <%= @team.scrum_time.strftime("%I:%M %p") %></a>
+   <div class="card d-inline-block ml-4 mt-4 text-center w-75">
+      <div class="card-header">
+         <h5 class="card-title">Team Members</h5>
       </div>
-  </div>
-  
-  
+      <div class="card-body">
+         <% if @team.students.empty? %>
+         <p>No team members</p>
+         <% else %>
+         <% @team.students.each do |student| %>
+         <p class="mt-2"><%= student.name %> : (<%= student.email %>)</p>
+         <br>
+         <% end %>
+         <% end %>
+      </div>
+   </div>
 </div>
-
 <div class="container text-center">
-  
+   <div class="card d-inline-block ml-2 mt-4 text-center" style="width:23%">
+      <div class="card-header">
+         <h5 class="card-title">Version Control</h5>
+      </div>
+      <div class="card-body">
+         <% if @team.version_control_link.present? %>
+         <a href=<%= @team.version_control_link %> target="_blank"><%= @team.version_control_link %></a>
+         <% else %>
+         <a class="disabled">N/A</a>
+         <br><br>
+         <% end %>
+      </div>
+   </div>
+   <div class="card d-inline-block ml-2 mt-4 text-center" style="width:23%">
+      <div class="card-header">
+         <h5 class="card-title">Production Site</h5>
+      </div>
+      <div class="card-body">
+         <% if @team.production_link.present? %>
+         <a href=<%= @team.production_link %> target="_blank"><%= @team.production_link %></a>
+         <% else %>
+         <a class="disabled">N/A</a>
+         <br><br>
+         <% end %>
+      </div>
+   </div>
+   <div class="card d-inline-block ml-2 mt-4 text-center" style="width:23%">
+      <div class="card-header">
+         <h5 class="card-title">Management Tracker</h5>
+      </div>
+      <div class="card-body">
+         <% if @team.management_link.present? %>
+         <a href=<%= @team.management_link %> target="_blank"><%= @team.management_link %></a>
+         <% else %>
+         <a class="disabled">N/A</a>
+         <br><br>
+         <% end %>
+      </div>
+   </div>
+   <div class="card d-inline-block ml-2 mt-4 text-center" style="width:23%">
+      <div class="card-header">
+         <h5 class="card-title">Scrum Details</h5>
+      </div>
+      <div class="card-body">
+         <% if @team.scrum_location.present? %>
+         <a class="disabled"><strong>Location:</strong> <%= @team.scrum_location %></a>
+         <% else %>
+         <a class="disabled"><strong>Location:</strong> N/A</a>
+         <% end %>
+         <br>
+         <a class="disabled"><strong>Time:</strong> <%= @team.scrum_time.strftime("%I:%M %p") %></a>
+      </div>
+   </div>
+</div>
+<div class="container text-center">
 <style>
-table, th, td {
-  border: 1px solid black;
-  border-collapse: collapse;
-  padding: 5px;
-  text-align: center;
-}
+   table, th, td {
+   border: 1px solid lightgray;
+   border-collapse: collapse;
+   padding: 1px;
+   text-align: center;
+   }
 </style>
-
-
-
 <body>
-
-<br>
-<div class=card d-inline-block ml-2 mt-4 text-center>
-<% if is_instructor_html() || is_student_on_team(current_user, @team) %>
-<div class="card-header">
-<h2 class="card-title">Iterations</h2>
-</div>
-<% @team.iterations.each.with_index do |iterations,index| %>
-<table style="width:100%">
-
-    <tr>
-      
-        <th><%= label_tag :iteration, "Iteration #{index} Status: \n" %>
-       <p><%= iterations.status %></p>
-
-        </th>
-       
-        <th>
-            <%= label_tag "Last updated at: \n" %>
-            <p> <%= iterations.updated_at.strftime('%a, %b %d, %Y %I:%M %p') %></p>
-        </th>
-           
-            <td><%= link_to 'View', iterations_details_path(@team, iterations), id: "view", :class => "btn btn-primary" %></td>  
-         <td><%= link_to 'Delete', iterations_delete_path(@team, iterations),
-                 data: { confirm: 'Are you sure?'}, id: "delete", :class => "btn btn-danger"%></td>  
-   </tr>
- </table>
-<% end %>
-</div>
-
-<br>
-<%= form_with(model: [ @team, @team.iterations.build ], local: true) do |form| %>
-  <p>
-    <%= form.submit id: "submit-iteration", :class => "btn btn-warning" %>
-  </p>
-<% end %>
-
-
-
+   <br>
+   <div class=card d-inline-block ml-2 mt-4 text-center>
+      <% if is_instructor_html() || is_student_on_team(current_user, @team) %>
+      <div class="card-header">
+         <h5 class="card-title">Iterations</h5>
+      </div>
+      <table style="width:100%">
+         <tr>
+            <th><%= label_tag :iteration, "Iteration" %></th>
+            <th><%= label_tag :iteration, "Student Status" %></th>
+            <th><%= label_tag :iteration, "Teacher Status" %></th>
+            <th><%= label_tag :updated, "Last Updated" %>
+            <th><%= label_tag :view, "View" %></th>
+            <th><%= label_tag :delete, "Delete" %>
+         </tr>
+         
+         <% @team.iterations.each.with_index do |iterations,index| %>
+            <tr>
+               <td><%= "#{index}" %></td>
+               <td><%= iterations.status %></td>
+               <td><%= iterations.teacher_status %></td>
+                  <td> <%= iterations.updated_at.strftime('%a, %b %d, %Y %I:%M %p') %></td>
+               <td><%= link_to 'View', iterations_details_path(@team, iterations), id: "view", :class => "btn btn-primary" %></td>
+               <td><%= link_to 'Delete', iterations_delete_path(@team, iterations),
+                  data: { confirm: 'Are you sure you want to delete this iteration?'}, id: "delete", :class => "btn btn-danger"%></td>
+            </tr>
+         <% end %>
+      </table>
+   </div>
+   <br>
+   <%= form_with(model: [ @team, @team.iterations.build ], local: true) do |form| %>
+   <p>
+      <%= form.submit id: "submit-iteration", :class => "btn btn-warning" %>
+   </p>
+   <% end %>
 </body>
-
 <% end %>
-
-
-
