Made table look better

--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -86,9 +86,10 @@
    table, th, td {
    border: 1px solid lightgray;
    border-collapse: collapse;
-   padding: 1px;
+   padding: 10px;
    text-align: center;
    }
+   tr:nth-child(even) {background-color: #f8f9fa;}
 </style>
 <body>
    <br>
