--- a/app/views/instructors/_form.html.erb
+++ b/app/views/instructors/_form.html.erb
@@ -11,8 +11,8 @@
     
     <% if params[:action] == "edit" %>
       <%= render "layouts/confirm_update", object: @instructor, as: 'object' %>
-      
-      <%= f.submit "Create Account", :class => "btn btn-primary mt-4" %>
-    <% end %>
+    <% else %>
+    <%= f.submit "Create Account", :class => "btn btn-primary mt-4" %>
+  <% end %>
   <% end %>
 </div>
