--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -17,7 +17,7 @@
           <script src="https://apis.google.com/js/platform.js" async defer></script>
         </head>
         <body>
-          <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark" style=margin-top:20px></div>
+          <div class="g-signin2" data-onsuccess="onSignIn" data-theme="light" style=margin-top:20px align='center'></div>
           <script>
           
             function onSignIn(googleUser) {
