--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -1,3 +1,4 @@
+<div>
 <h1>Teams for Section <%= @section.number %></h1>
 
 <table border="1">
@@ -21,3 +22,4 @@
 
 <br/>
 <%= link_to 'Back', section_projects_path, id: 'back' %>
+</div>
