--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -1,4 +1,5 @@
-<div><br>
+<div>
+<br>
 <h1 class="display-4 mt-5 ml-5 d-inline">Team: <%=@team.name%></h1>
 <% if has_section_html(@team.project.section.id) || is_student_in_section(current_user, @team.project.section) #is_student_on_team(current_user, @team) %>
 <%= link_to 'Edit Team' , edit_team_path(@team), class: "btn btn-danger float-right mt-5 mr-5"%>
@@ -83,50 +84,50 @@
    </div>
 </div>
 <div class="container text-center">
-<style>
-   table, th, td {
-   border: 1px solid lightgray;
-   border-collapse: collapse;
-   padding: 10px;
-   text-align: center;
-   }
-</style>
-<body>
-   <br>
-   <div class=card d-inline-block ml-2 mt-4 text-center>
-      <% if is_instructor_html() || is_student_on_team(current_user, @team) %>
-      <div class="card-header">
-         <h5 class="card-title">Iterations</h5>
-      </div>
-      <table style="width:100%">
-         <tr>
-            <th><%= label_tag :iteration, "Iteration" %></th>
-            <th><%= label_tag :iteration, "Student Status" %></th>
-            <th><%= label_tag :iteration, "Teacher Status" %></th>
-            <th><%= label_tag :updated, "Last Updated" %>
-            <th><%= label_tag :view, "View" %></th>
-            <th><%= label_tag :delete, "Delete" %>
-         </tr>
-         
-         <% @team.iterations.each.with_index do |iterations,index| %>
-            <tr>
-               <td><%= "#{index}" %></td>
-               <td><%= iterations.status %></td>
-               <td><%= iterations.teacher_status %></td>
+   <style>
+      table, th, td {
+      border: 1px solid lightgray;
+      border-collapse: collapse;
+      padding: 10px;
+      text-align: center;
+      }
+   </style>
+   <body>
+      <br>
+      <div class=card d-inline-block ml-2 mt-4 text-center>
+         <% if is_instructor_html() || is_student_on_team(current_user, @team) %>
+         <div class="card-header">
+            <h5 class="card-title">Iterations</h5>
+         </div>
+         <div class="card-body">
+            <table style="width:100%">
+               <tr>
+                  <th><%= label_tag :iteration, "Iteration" %></th>
+                  <th><%= label_tag :iteration, "Student Status" %></th>
+                  <th><%= label_tag :iteration, "Teacher Status" %></th>
+                  <th><%= label_tag :updated, "Last Updated" %>
+                  <th><%= label_tag :view, "View" %></th>
+                  <th><%= label_tag :delete, "Delete" %>
+               </tr>
+               <% @team.iterations.each.with_index do |iterations,index| %>
+               <tr>
+                  <td><%= "#{index}" %></td>
+                  <td><%= iterations.status %></td>
+                  <td><%= iterations.teacher_status %></td>
                   <td> <%= iterations.updated_at.strftime('%a, %b %d, %Y %I:%M %p') %></td>
-               <td><%= link_to 'View', iterations_details_path(@team, iterations), id: "view", :class => "btn btn-primary" %></td>
-               <td><%= link_to 'Delete', iterations_delete_path(@team, iterations),
-                  data: { confirm: 'Are you sure you want to delete this iteration?'}, id: "delete", :class => "btn btn-danger"%></td>
-            </tr>
+                  <td><%= link_to 'View', iterations_details_path(@team, iterations), id: "view", :class => "btn btn-primary" %></td>
+                  <td><%= link_to 'Delete', iterations_delete_path(@team, iterations),
+                     data: { confirm: 'Are you sure you want to delete this iteration?'}, id: "delete", :class => "btn btn-danger"%></td>
+               </tr>
+               <% end %>
+            </table>
+         </div>
+         <%= form_with(model: [ @team, @team.iterations.build ], local: true) do |form| %>
+         <p>
+            <%= form.submit id: "submit-iteration", :class => "btn btn-warning" %>
+         </p>
          <% end %>
-      </table>
-   </div>
-   <br>
-   <%= form_with(model: [ @team, @team.iterations.build ], local: true) do |form| %>
-   <p>
-      <%= form.submit id: "submit-iteration", :class => "btn btn-warning" %>
-   </p>
-   <% end %>
-</body>
-<% end %>
+      <% end %>
+      </div>
+   </body>
 </div>
