--- a/app/views/iterations/index.html.erb
+++ b/app/views/iterations/index.html.erb
@@ -37,6 +37,7 @@
    </div>
 </div>
 <% end %>
+
 <% else if is_student_on_team(current_user, @team) %>
 <div class="container text-center">
 <div class="card d-inline-block ml-4 mt-4 w-75">
@@ -56,7 +57,7 @@
       <%= form_with(url: iterations_update_path(@team,@iteration), model: @iteration, local: true) do |form| %>
       <p>
          <%= form.label :status, "Set Iteration Status: " %>
-         <%= form.select(:status, options_for_select([['Submitted', 'Submitted'], ['Missing', 'Missing'],['Not submitted','Not submitted']], @iteration.status)) %>
+         <%= form.select(:status, options_for_select([['Not submitted','Not submitted'],['Submitted', 'Submitted'], ['Missing', 'Missing']], @iteration.status)) %>
       </p>
       <p>
          <%= form.label :comments, "Set Comment:"%>
@@ -66,7 +67,7 @@
       <p>
          <%= form.submit id: "update-iteration", :class => "btn btn-warning" %>
       </p>
-      <p><%= link_to 'Delete Iteration', iterations_delete_path(@team, @iterations),
+     <p><%= link_to 'Delete Iteration', iterations_delete_path(@team, @iteration),
                      data: { confirm: 'Are you sure you want to delete this iteration?'}, id: "delete", :class => "btn btn-danger"%></p>
    </div>
 </div>
