--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -92,6 +92,47 @@
       text-align: center;
       }
    </style>
+   
+   <style>
+.tooltip {
+  position: relative;
+  display: inline-block;
+  border-bottom: 1px dotted black;
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  position: absolute;
+  z-index: 1;
+  bottom: 125%;
+  left: 50%;
+  margin-left: -60px;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.tooltip .tooltiptext::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #555 transparent transparent transparent;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+  opacity: 1;
+}
+</style>
    <body>
       <br>
       <div class=card d-inline-block ml-2 mt-4 text-center>
@@ -113,12 +154,14 @@
                <% @team.iterations.each.with_index do |iterations,index| %>
                <tr>
                   <td><%= link_to "#{index}", iterations_details_path(@team, iterations) %></td>
-                  <td span=<%=iterations.comments%>><%= link_to "#{iterations.status}",iterations_details_path(@team, iterations)  %></td>
-                  <td span=<%=iterations.teacher_comment%>><%= link_to "#{iterations.teacher_status}",iterations_details_path(@team, iterations)  %></td>
+                  <td><%= link_to "#{iterations.status}",iterations_details_path(@team, iterations)  %></td>
+                  <td><%= link_to "#{iterations.teacher_status}",iterations_details_path(@team, iterations)  %></td>
                   <td><%= link_to "#{iterations.updated_at.strftime('%a, %b %d, %Y %I:%M %p')}",iterations_details_path(@team, iterations) %></td>
-                 <!-- <td><%= link_to 'View', iterations_details_path(@team, iterations), id: "view", :class => "btn btn-primary" %></td>
-                  <td><%= link_to 'Delete', iterations_delete_path(@team, iterations),
+                  <td><%= link_to 'View', iterations_details_path(@team, iterations), id: "view", :class => "btn btn-primary" %></td>
+                 <!-- <td><%= link_to 'Delete', iterations_delete_path(@team, iterations),
                      data: { confirm: 'Are you sure you want to delete this iteration?'}, id: "delete", :class => "btn btn-danger"%></td>
+                     <td class="tooltip"><% "#{index}"%>
+                  <span class="tooltiptext"><%=iterations.teacher_comment%></span></td>
                      -->
                </tr>
                <% end %>
