--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -153,16 +153,14 @@
                </tr>
                <% @iterations.each.with_index do |iterations,index| %>
                <tr>
-                  <td><%= link_to "#{index}", iterations_details_path(@team, iterations) %></td>
-                  <td><%= link_to "#{iterations.status}",iterations_details_path(@team, iterations)  %></td>
-                  <td><%= link_to "#{iterations.teacher_status}",iterations_details_path(@team, iterations)  %></td>
+                  <td><%= link_to "#{index}", iterations_details_path(@team, iterations), :title => iterations.comment %></td>
+                  <td><%= link_to "#{iterations.status}", iterations_details_path(@team, iterations) %></td>
+                  <td><%= link_to "#{iterations.teacher_status}", iterations_details_path(@team, iterations), :title => iterations.teacher_comment %></td>
                   <td><%= link_to "#{iterations.updated_at.strftime('%a, %b %d, %Y %I:%M %p')}",iterations_details_path(@team, iterations) %></td>
                  <!-- <td><%= link_to 'View', iterations_details_path(@team, iterations), id: "view", :class => "btn btn-primary" %></td>
                   <td><%= link_to 'Delete', iterations_delete_path(@team, iterations),
                      data: { confirm: 'Are you sure you want to delete this iteration?'}, id: "delete", :class => "btn btn-danger"%></td>
-                     <td class="tooltip"><% "#{index}"%>
-                  <span class="tooltiptext"><%=iterations.teacher_comment%></span></td>
-                     -->
+                  -->
                </tr>
                <% end %>
             </table>
